<resources>
    <string name="app_name">FinWiz</string>

    <string name="close_dialog">Are you sure you want to exit?</string>
    <string name="close_yes">Yes</string>
    <string name="close_no">No</string>

    <!-- Drawer Lables -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Button Labels -->
    <string name="button_select">SELECT</string>
    <string name="button_save">SAVE</string>
    <string name="button_delete">DELETE</string>
    <string name="button_cancel">CANCEL</string>

    <!-- Delete Dialog -->
    <string name="delete_budget_dialog_desc">This will also permanently remove all transactions associated with this budget.</string>

    <!-- Transaction Dialog -->
    <string name="new_transaction_title">New Transaction</string>
    <string name="edit_transaction_title">Edit Transaction</string>


    <!-- Activity Labels -->
    <string name="label_accounts">Accounts</string>
    <string name="label_addacount">Add Account</string>
    <string name="label_budgets">Budgets</string>
    <string name="label_addbudgets">Add Budget</string>
    <string name="label_budgetdetails">Budget Details</string>
    <string name="label_budgethistory">Budget History</string>

    <!-- Configure Account -->
    <string name="asset_desc"><b>Asset</b> (Bank accounts, investment/brokerage accounts, cash, etc.)</string>
    <string name="debt_desc"><b>Debt</b> (Credit card balances, mortgages, car loans, etc.)</string>

    <string name="menu_update_acc">Update Account</string>
    <string name="menu_delete_acc">Delete Account</string>

    <string name="configure_add_title">Add an Account</string>
    <string name="configure_update_title">Update Account</string>
    <string name="submit">Submit</string>

    <!-- Preferences -->
    <string name="pref_security_title">Security</string>
    <string name="pref_pinMode">Use PIN</string>
    <string name="pref_pinMode_key">key</string>
    <string name="pref_pin_key">key</string>

<!-- Settings -->
    <string name="settings_label">Settings</string>
    <string name="create_pin_dialog">Create 4-digit PIN</string>
    <string name="confirm_pin_dialog">Confirm 4-digit PIN</string>
    <string name="pin_message_dialog">PIN doesn\'t match. Please try again.</string>
    <string name="pin_message_splash">Incorrect PIN. Please try again.</string>
    <string name="pin_enter">Enter PIN</string>

    <!-- Display Accounts -->
    <string name="assets_label">ASSETS</string>
    <string name="assets_value">+$0.00</string>
    <string name="debts_label">DEBTS</string>
    <string name="debts_value">-$0.00</string>
    <string name="networth_label">NET WORTH</string>
    <string name="networth_value">$0.00</string>
    <string name="no_accounts_msg">No accounts detected. Please add an account.</string>
    <string name="add_account">Add Account</string>
    <string name="last_updated">Last updated:</string>
    <string name="account_date">January 1, 2015</string>
    <string name="accounts_list_title">Accounts</string>


    <!-- Display Budgets -->
    <string name="add_budget">Add Budget</string>
    <string name="no_budgets_msg">No budgets detected. Please add a budget.</string>
    <string name="budget_spent">$20</string>
    <string name="budget_orig">$1,020</string>
    <string name="budget_left">$1,000</string>
    <string name="left">Left</string>
    <string name="budget_name">Transportation</string>
    <string name="add_transactions">Record New Transaction</string>
    <string name="create_budget_dialog">Create New Budget</string>
    <string name="save_budget_dialog">Save</string>
    <string name="cancel_budget_dialog">Cancel</string>
    <string name="error_budget_dialog">Please enter a valid name.</string>
    <string name="error_amount_dialog">Please enter a valid amount.</string>
    <string name="budget_name_exists">This budget name already exists.</string>
    <string name="error_category_dialog">Please select a category.</string>
    <string name="budget_name_hint">Name</string>
    <string name="budget_amount_hint">Amount</string>

    <string name="menu_edit_trans">Edit Transaction</string>
    <string name="menu_delete_trans">Delete Transaction</string>
    <string name="delete_trans_msg">Are you sure you want to permanently delete this transaction?</string>

    <!-- Menu Strings -->
    <string name="edit_budget">Edit Budget</string>
    <string name="history_budget">View History</string>
    <string name="delete_budget">Delete Budget</string>
    <string name="delete_budget_msg">Are you sure you want to permanently remove this budget? This will also remove all transactions associated with this budget.</string>

</resources>
