<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/networth_cardview"
        android:layout_width="340dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="4sp"
        card_view:cardUseCompatPadding="true"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme"
            android:gravity="center_horizontal"
            android:text="Net Worth"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingTop="15dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/assets_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/assets_label"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/total_assets_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green_money"
                    android:textSize="20sp"
                    tools:text="@string/assets_value" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debts_label"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/total_debts_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red_money"
                    android:textSize="20sp"
                    tools:text="@string/debts_value" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/networth_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/networth_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/networth_label"
                android:textSize="18sp"
                tools:text="NET WORTH" />

            <TextView
                android:id="@+id/networth_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/networth_label"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:textColor="@color/textview"
                android:textSize="32sp"
                tools:text="@string/networth_value" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>