<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:actionBarSize">

    <ListView
        android:id="@+id/budget_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:clipToPadding="false"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:paddingBottom="70dp"
        />


    <TextView
        android:id="@+id/no_budgets_textview"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:gravity="center_horizontal"
        android:text="@string/no_budgets_msg"
        android:textSize="18sp" />

    <Button
        android:id="@+id/add_budget_button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:background="#00C8C8"
        android:text="@string/add_budget"
        android:textColor="#ffffff"
        android:textSize="22sp"

        />

    <Button
        android:id="@+id/add_transactions_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="#CC00C8C8"
        android:text="@string/add_transactions"
        android:textColor="#ffffff"
        android:textSize="22sp" />


</RelativeLayout>