<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_centerHorizontal="true"
        android:layout_width="340dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        card_view:cardCornerRadius="0dp">

        <com.androidplot.xy.XYPlot
            android:id="@+id/trans_trending_plot"
            android:layout_width="335dp"
            android:layout_height="190dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="-5dp"

            androidPlot.title="Current Spend"
            androidPlot.titleWidget.labelPaint.textSize="11sp"
            androidPlot.titleWidget.labelPaint.Color="#646464"
            androidPlot.titleWidget.paddingTop="0dp"

            androidPlot.graphWidget.marginTop="20dp"
            androidPlot.graphWidget.paddingTop="0dp"
            androidPlot.graphWidget.marginLeft="25dp"
            androidPlot.graphWidget.marginBottom="15dp"
            androidPlot.graphWidget.backgroundPaint.Color="#FAFAFA"
            androidPlot.graphWidget.gridBackgroundPaint.Color="#FAFAFA"
            androidPlot.margin="0dp"
            androidPlot.graphWidget.rangeLabelPaint.textSize="10sp"
            androidPlot.graphWidget.DomainLabelPaint.textSize="10sp"
            />
    </android.support.v7.widget.CardView>






    <ListView
        android:id="@+id/budget_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:clipToPadding="false"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:paddingBottom="70dp" />


    <TextView
        android:id="@+id/no_budgets_textview"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:gravity="center_horizontal"
        android:text="@string/no_budgets_msg"
        android:textSize="18sp" />

    <Button
        android:id="@+id/add_budget_button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:background="#00C8C8"
        android:text="@string/add_budget"
        android:textColor="#ffffff"
        android:textSize="22sp"

        />

    <Button
        android:id="@+id/add_transactions_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="#CC00C8C8"
        android:text="@string/add_transactions"
        android:textColor="#ffffff"
        android:textSize="22sp" />


</RelativeLayout>