<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<TextView
    android:id="@+id/overview_previous_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:text="Last Month's Spend"
    android:textSize="17sp"/>

    <TextView
        android:id="@+id/overview_previous_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/overview_previous_label"
        android:layout_marginTop="35dp"
        android:layout_centerInParent="@id/overview_previous_label"
        android:text="$1,200"/>

    <TextView
        android:id="@+id/overview_current_lablel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@id/overview_previous_label"
        android:layout_alignBaseline="@id/overview_previous_label"
        android:layout_marginTop="25dp"
        android:textSize="17sp"
        android:text="This Month's Spend"/>


    <TextView
        android:id="@+id/overview_current_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/overview_current_lablel"
        android:layout_toRightOf="@id/overview_previous_value"
        android:layout_alignBaseline="@id/overview_previous_value"
        android:text="$1,000"/>


    <TextView
        android:id="@+id/overview_days_lablel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="Days remaining: 8"
        android:textSize="18sp"/>


    <ListView
        android:id="@+id/budget_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:clipToPadding="false"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:paddingBottom="70dp" />


    <TextView
        android:id="@+id/no_budgets_textview"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:gravity="center_horizontal"
        android:text="@string/no_budgets_msg"
        android:textSize="18sp" />

    <Button
        android:id="@+id/add_budget_button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:background="#00C8C8"
        android:text="@string/add_budget"
        android:textColor="#ffffff"
        android:textSize="22sp"

        />

    <Button
        android:id="@+id/add_transactions_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="#CC00C8C8"
        android:text="@string/add_transactions"
        android:textColor="#ffffff"
        android:textSize="22sp" />


</RelativeLayout>