<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/configure_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/configure_add_title"
        android:textSize="26sp" />


    <EditText
        android:id="@+id/account_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="16dp"
        android:inputType="text|textCapWords"
        android:hint="Enter Account Name"
        android:imeOptions="actionDone"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Current Balance:"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/account_balance_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:inputType="numberDecimal"
            android:hint="$0.00"
            android:imeOptions="actionDone"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date as of:"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/account_date_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:editable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:gravity="end"
            android:hint="Select Date"

            android:textSize="22sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="Account Type"
        android:textSize="22sp" />
    <View
        android:layout_marginBottom="6dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#00C8C8"/>


    <RadioGroup
        android:id="@+id/account_type_radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/asset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/asset_desc"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/debt_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/debt_desc"
                android:textSize="18sp" />

        </LinearLayout>

    </RadioGroup>


    <View
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#00C8C8"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/create_account_button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:textSize="22sp"
        android:text="@string/submit"
        android:textColor="#ffffff"
        android:background="#00C8C8"
        android:layout_marginBottom="10dp"
        />
    </RelativeLayout>

</LinearLayout>